Fix for flexbox on iOS Safari

--- a/src/app/assets/stylesheets/_index.scss
+++ b/src/app/assets/stylesheets/_index.scss
@@ -1,5 +1,7 @@
 .map-wrapper {
   padding: 0;
+  background-color: #fff;
+  height: 100vh;
   .top-map {
     width: 100vw;
     opacity: 1;
@@ -16,14 +18,23 @@
     width: 100vw;
     height: 100vh;
     display: flex;
+    display: -webkit-flex;
     flex-direction: column;
+    -webkit-flex-direction: column;
     justify-content: center;
+    -webkit-justify-content: center;
     align-items: center;
+    -webkit-align-items: center;
     .landing-icon, .nexbus {
       width: 50vw;
       @media screen and (min-width: 500px) {
         width: 30vw;
       }
+    }
+
+    .btn-login {
+      margin-top: 2vh;
+      z-index: 1;
     }
   }
 
@@ -33,6 +44,7 @@
     position: fixed;
     opacity: 1;
     transition: opacity 1s;
+    z-index: 0;
     @media screen and (min-width: 500px) {
       opacity: 0;
       transition: opacity 1s;
